// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildSystemSnapshot snapshots > minimal-node snapshot is unchanged 1`] = `
{
  "dependency_graph": {
    "nodes": [],
    "relationships": [],
  },
  "entry_points": [
    "minimal-node/index.js",
  ],
  "file_stats": {
    "code_files": 1,
    "config_files": 1,
    "size_kb": "12.5",
    "total_files": 2,
  },
  "folder_structure": {
    "folders": [
      "minimal-node",
    ],
    "key_files": [
      "minimal-node/package.json",
    ],
  },
  "project_name": "minimal-node",
  "project_summary": "Frontend JavaScript application with 1 code files",
  "risk_signals": [],
  "stack": [
    "JavaScript",
    "Node.js",
  ],
}
`;

exports[`buildSystemSnapshot snapshots > react-ts-app snapshot is unchanged 1`] = `
{
  "dependency_graph": {
    "nodes": [
      "react-ts-app/src/App.tsx",
      "react-ts-app/src/index.ts",
    ],
    "relationships": [
      "react-ts-app/src/App.tsx → import React from 'react'",
      "react-ts-app/src/index.ts → import App from './App'",
    ],
  },
  "entry_points": [
    "react-ts-app/src/App.tsx",
    "react-ts-app/src/index.ts",
  ],
  "file_stats": {
    "code_files": 2,
    "config_files": 2,
    "size_kb": "12.5",
    "total_files": 4,
  },
  "folder_structure": {
    "folders": [
      "react-ts-app",
      "react-ts-app/src",
    ],
    "key_files": [
      "react-ts-app/package.json",
      "react-ts-app/tsconfig.json",
    ],
  },
  "project_name": "react-ts-app",
  "project_summary": "Frontend React application with 2 code files",
  "risk_signals": [],
  "stack": [
    "React",
    "JavaScript",
    "Node.js",
  ],
}
`;

exports[`buildSystemSnapshot snapshots > risky-secrets snapshot is unchanged 1`] = `
{
  "dependency_graph": {
    "nodes": [],
    "relationships": [],
  },
  "entry_points": [
    "risky-secrets/server.js",
  ],
  "file_stats": {
    "code_files": 3,
    "config_files": 0,
    "size_kb": "12.5",
    "total_files": 3,
  },
  "folder_structure": {
    "folders": [
      "risky-secrets",
    ],
    "key_files": [],
  },
  "project_name": "risky-secrets",
  "project_summary": "Backend JavaScript service with 3 code files",
  "risk_signals": [
    "Sensitive data detected in risky-secrets/config.js",
    "Insecure HTTP detected in risky-secrets/config.js",
    "Dangerous function usage in risky-secrets/server.js",
  ],
  "stack": [
    "JavaScript",
  ],
}
`;

exports[`buildSystemSnapshot — golden snapshots > minimal-node snapshot is unchanged 1`] = `
{
  "dependency_graph": {
    "nodes": [],
    "relationships": [],
  },
  "entry_points": [
    "minimal-node/index.js",
  ],
  "file_stats": {
    "code_files": 1,
    "config_files": 1,
    "size_kb": "12.5",
    "total_files": 2,
  },
  "folder_structure": {
    "folders": [
      "minimal-node",
    ],
    "key_files": [
      "minimal-node/package.json",
    ],
  },
  "project_name": "minimal-node",
  "project_summary": "Frontend JavaScript application with 1 code files",
  "risk_signals": [],
  "stack": [
    "JavaScript",
    "Node.js",
  ],
}
`;

exports[`buildSystemSnapshot — golden snapshots > react-ts-app snapshot is unchanged 1`] = `
{
  "dependency_graph": {
    "nodes": [
      "react-ts-app/src/App.tsx",
      "react-ts-app/src/index.ts",
    ],
    "relationships": [
      "react-ts-app/src/App.tsx → import React from 'react'",
      "react-ts-app/src/index.ts → import App from './App'",
    ],
  },
  "entry_points": [
    "react-ts-app/src/App.tsx",
    "react-ts-app/src/index.ts",
  ],
  "file_stats": {
    "code_files": 2,
    "config_files": 2,
    "size_kb": "12.5",
    "total_files": 4,
  },
  "folder_structure": {
    "folders": [
      "react-ts-app",
      "react-ts-app/src",
    ],
    "key_files": [
      "react-ts-app/package.json",
      "react-ts-app/tsconfig.json",
    ],
  },
  "project_name": "react-ts-app",
  "project_summary": "Frontend React application with 2 code files",
  "risk_signals": [],
  "stack": [
    "React",
    "JavaScript",
    "Node.js",
  ],
}
`;

exports[`buildSystemSnapshot — golden snapshots > risky-secrets snapshot is unchanged 1`] = `
{
  "dependency_graph": {
    "nodes": [],
    "relationships": [],
  },
  "entry_points": [
    "risky-secrets/server.js",
  ],
  "file_stats": {
    "code_files": 3,
    "config_files": 0,
    "size_kb": "12.5",
    "total_files": 3,
  },
  "folder_structure": {
    "folders": [
      "risky-secrets",
    ],
    "key_files": [],
  },
  "project_name": "risky-secrets",
  "project_summary": "Backend JavaScript service with 3 code files",
  "risk_signals": [
    "Sensitive data detected in risky-secrets/config.js",
    "Insecure HTTP detected in risky-secrets/config.js",
    "Dangerous function usage in risky-secrets/server.js",
  ],
  "stack": [
    "JavaScript",
  ],
}
`;
